--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,11 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.4,<3.9
+    - python >=3.4
   run:
     - botocore >=1.11.3
     - future
-    - python >=3.4,<3.9
+    - python >=3.4
     - wrapt
     # Requires enum34 for python <3.4 which is not supported by conda-forge anymore and therefore skipped.
 
